# 1inch-mcp-server

./: .dockerignore  Dockerfile  README.md  activeContext.md  alembic.ini  docker-compose.yml  main.py  progress.md  projectbrief.md  pyproject.toml  tasks.md
.github/workflows/: hh1im.yaml
alembic/: env.py
alembic/versions/: 2025_08_01_1258-e68ba9a78dc0_orders_data.py  e8be5786aa4f_initial_migration_for_limitorder_model.py
inch_mcp_server/: __init__.py  cli.py  config.py  dependencies.py
inch_mcp_server/api/: __init__.py  router.py
inch_mcp_server/api/routes/: __init__.py  health.py  limit_orders.py
inch_mcp_server/core/: __init__.py  limit_order_handler.py  models.py  one_inch_service.py  server.py  services.py
inch_mcp_server/database/: __init__.py  connection.py  migrations.py  models.py
inch_mcp_server/handlers/: __init__.py  limit_order_handler.py
inch_mcp_server/integrations/api/: limit_order_api_client.py
inch_mcp_server/integrations/services/: limit_order_service.py
inch_mcp_server/utils/: __init__.py  logger_setup.py  validation.py
