[build-system]
requires = [ "setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inch-mcp-server"
version = "1.0.0"
description = "1inch API MCP"
readme = "README.md"
keywords = [ "mcp", "1inch", "model", "context", "protocol", "server"]
requires-python = ">=3.11"
dependencies = [
 "fastapi>=0.116.1",
 "mcp>=1.12.2",
 "httpx>=0.28.1",
 "pyjwt>=2.10.1",
 "ruff>=0.12.5",
 "tomlkit>=0.13.3",
 "pydantic>=2.11.7",
]
classifiers = [
]

license = {text = "MIT"}

[project.scripts]
1inch-mcp = "main:main"

[tool.setuptools]
packages = ["inch_mcp_server"]
py-modules = [ "main"]
