[build-system]
requires = [ "setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inch-mcp-server"
version = "1.0.0"
description = "1inch API MCP"
readme = "README.md"
keywords = [ "mcp", "1inch", "model", "context", "protocol", "server"]
requires-python = ">=3.10"
dependencies = [
 "fastapi>=0.116.1",
 "fastmcp>=2.0.0",
 "httpx>=0.28.1",
 "pyjwt>=2.10.1",
 "ruff>=0.12.5",
 "tomlkit>=0.13.3",
 "pydantic>=2.11.7",
 "pydantic-settings>=2.0.0",
 "uvicorn>=0.30.0",
 "sqlalchemy[asyncio]>=2.0.25",
 "greenlet>=2.0.0",
 "alembic>=1.13.0",
 "asyncpg>=0.29.0",
 "psycopg2-binary>=2.9.0",
 "typer[all]>=0.12.0",
 "rich>=13.0.0",
]
classifiers = [
]

license = {text = "MIT"}

[project.scripts]
1inch-mcp = "main:main"
1inch-mcp-cli = "inch_mcp_server.cli:app"

[tool.setuptools]
packages = ["inch_mcp_server"]
py-modules = [ "main"]
