[build-system]
requires = [ "setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "1inch-mcp"
version = "0.0.1"
description = "1inch API Limit Order MCP"
readme = "README.md"
license = "MIT"
dependencies = [
    "alembic==1.16.4",
    "asyncpg==0.30.0",
    "fastapi==0.116.1",
    "fastapi-async-sqlalchemy==0.6.1",
    "fastmcp==2.10.6",
    "httpx==0.28.1",
    "psycopg-binary==3.2.9",
    "pydantic-settings==2.10.1",
    "PyJWT==2.8.0",
    "redis==6.2.0",
    "ruff==0.12.7",
    "sqlalchemy==2.0.42",
    "uvicorn==0.35.0"
]
requires-python = ">=3.11,<4.0.0"


[project.scripts]
1inch-mcp = "main:main"
1inch-mcp-cli = "inch_mcp_server.cli:app"

[tool.setuptools]
packages = ["inch_mcp_server"]
py-modules = [ "main"]

[tool.poetry]
packages = [
    { include = "inch_mcp_server" }
]
